chore: internalize app properties

--- a/DockerizeProject/webservices/src/main/resources/application.properties
+++ b/DockerizeProject/webservices/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.config.import=optional:file:.env[.properties]
 spring.application.name=webservices
+server.port=${APP_PORT}
+
+### Postgres Connection Configs ###
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+### JPA Hibernate Configs ###
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
