chore: internalize argon2 value params

--- a/DockerizeProject/webservices/src/main/resources/application.properties
+++ b/DockerizeProject/webservices/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+
+### Argon2 configs ###
+password.hashing.algo.argon2.type=${ARGON2_TYPE}
+password.hashing.algo.argon2.saltLength=${ARGON2_HASH_LENGTH}
+password.hashing.algo.argon2.hashLength=${ARGON2_SALT_LENGTH}
+password.hashing.algo.argon2.iterations=${ARGON2_ITERATIONS}
+password.hashing.algo.argon2.memory=${ARGON2_MEMORY}
+password.hashing.algo.argon2.parallelism=${ARGON2_PARALLELISM}
