mod: added security-jwt properties and internalized value

--- a/DockerizeProject/webservices/src/main/resources/application.properties
+++ b/DockerizeProject/webservices/src/main/resources/application.properties
@@ -20,3 +20,8 @@ password.hashing.algo.argon2.hashLength=${ARGON2_SALT_LENGTH}
 password.hashing.algo.argon2.iterations=${ARGON2_ITERATIONS}
 password.hashing.algo.argon2.memory=${ARGON2_MEMORY}
 password.hashing.algo.argon2.parallelism=${ARGON2_PARALLELISM}
+
+### jwt properties ###
+security.jwt.secret-key=${JWT_SECRET_KEY}
+security.jwt.access-expiration-time=${JWT_ACCESS_TOKEN_EXP}
+# security.jwt.refresh-expiration-time=${JWT_ACCESS_TOKEN_EXP}
